<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_input"
    android:padding="14dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/tvLibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit_libro"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#222222" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="14sp"
        android:textColor="#555555"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textSize="14sp"
        android:textColor="#555555"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tvIdiomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idiomas"
        android:textSize="14sp"
        android:textColor="#555555"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:textSize="14sp"
        android:textColor="#555555"
        android:layout_marginTop="4dp" />

</LinearLayout>